--- a/sites/configurations/goodmoves/templates/vacancies/jobs-in.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/jobs-in.hbs
@@ -1,7 +1,7 @@
 <div id="detailed-results-container" class="container-content content-primary-search">
   <h1 class="mdc-typography--headline3">
     Jobs in
-    {{~#if @root.request.params.ward}}
+    {{#if @root.request.params.ward}}
     {{{replace (getProperty @root.data.termsMaps.districts.slugsMap (concat @root.request.params.district ".wards." @root.request.params.ward ".term")) "/" " &amp; "}}},
     {{/if~}}
     {{getProperty @root.data.termsMaps.districts.slugsMap (concat @root.request.params.district ".term")}}
@@ -49,9 +49,9 @@
   <div class="search-info mdc-elevation--z3">
     <strong>
       Total number of jobs in
-      {{~#if @root.request.params.ward}}
+      {{#if @root.request.params.ward}}
       {{{replace (getProperty @root.data.termsMaps.districts.slugsMap (concat @root.request.params.district ".wards." @root.request.params.ward ".term")) "/" " &amp; "}}},
-      {{/if~}}
+      {{/if}}
       {{getProperty @root.data.termsMaps.districts.slugsMap (concat @root.request.params.district ".term")}}:
     </strong> {{@root.data.search_data.detailed_results.hits.total}}
   </div>
