--- a/sites/configurations/goodmoves/templates/vacancies/search-head-tags.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/search-head-tags.hbs
@@ -1,6 +1,6 @@
 {{#if @root.request.params.district ~}}
-<title>Goodmoves – Jobs in {{#if @root.request.params.ward}}{{{replace (getProperty @root.data.termsMaps.districts.slugsMap (concat @root.request.params.district ".wards." @root.request.params.ward ".term")) "/" " &amp; "}}}, {{/if}}{{getProperty @root.data.termsMaps.districts.slugsMap (concat @root.request.params.district ".term")}}</title>
-<meta property="og:title" content="Goodmoves – Jobs in {{#if @root.request.params.ward}}{{{replace (getProperty @root.data.termsMaps.districts.slugsMap (concat @root.request.params.district ".wards." @root.request.params.ward ".term")) "/" " &amp; "}}}, {{/if}}{{getProperty @root.data.termsMaps.districts.slugsMap (concat @root.request.params.district ".term")}}" data-dynamic="true">
+<title>Goodmoves – Jobs in {{#if @root.request.params.ward}}{{{replace (getProperty @root.data.termsMaps.districts.slugsMap (concat @root.request.params.district ".wards." @root.request.params.ward ".term")) "/" " &amp; "}}}, {{/if}}{{getProperty @root.data.termsMaps.districts.slugsMap (concat @root.request.params.district ".term")}} – {{momentFormat (moment now) "MMMM YYYY"}}</title>
+<meta property="og:title" content="Goodmoves – Jobs in {{#if @root.request.params.ward}}{{{replace (getProperty @root.data.termsMaps.districts.slugsMap (concat @root.request.params.district ".wards." @root.request.params.ward ".term")) "/" " &amp; "}}}, {{/if}}{{getProperty @root.data.termsMaps.districts.slugsMap (concat @root.request.params.district ".term")}} – {{momentFormat (moment now) "MMMM YYYY"}}" data-dynamic="true">
 {{else}}
 <title>Goodmoves – Search results</title>
 <meta property="og:title" content="Goodmoves – Search results" data-dynamic="true">
