Improved page titles

--- a/sites/configurations/goodmoves/templates/events/search-head-tags.hbs
+++ b/sites/configurations/goodmoves/templates/events/search-head-tags.hbs
@@ -1,7 +1,7 @@
 {{#if data.primaryResponse.hits.hits.[0] ~}}
-<title>Goodmoves – Search results</title>
-<meta property="og:title" content="Goodmoves – Search results" data-dynamic="true">
+<title>Training search results – Goodmoves</title>
+<meta property="og:title" content="Training search results – Goodmoves" data-dynamic="true">
 {{else}}
-<title>Goodmoves – Search results</title>
-<meta property="og:title" content="Goodmoves – Search results" data-dynamic="true">
+<title>Training search results – Goodmoves</title>
+<meta property="og:title" content="Training search results – Goodmoves" data-dynamic="true">
 {{/if ~}}
