--- a/sites/configurations/goodmoves/templates/organisations/search-head-tags.hbs
+++ b/sites/configurations/goodmoves/templates/organisations/search-head-tags.hbs
@@ -1,7 +1,7 @@
-{{#if data.primaryResponse.hits.hits.[0] ~}}
-<title>Goodmoves – Search results</title>
-<meta property="og:title" content="Goodmoves – Search results" data-dynamic="true">
+{{#if @root.data.primaryResponse.hits.hits.[0] ~}}
+<title>Search results – Goodmoves</title>
+<meta property="og:title" content="Search results – Goodmoves" data-dynamic="true">
 {{else}}
-<title>Goodmoves – Search results</title>
-<meta property="og:title" content="Goodmoves – Search results" data-dynamic="true">
+<title>Search results – Goodmoves</title>
+<meta property="og:title" content="Search results – Goodmoves" data-dynamic="true">
 {{/if ~}}
