--- a/sites/configurations/goodmoves/templates/vacancies/search-rss-head-tags.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/search-rss-head-tags.hbs
@@ -1,9 +1,9 @@
 {{#if data.primaryResponse.hits.hits.[0] ~}}
 {{#with data.primaryResponse.hits.hits.[0]._source ~}}
-<title>Goodmoves – Search results</title>
+<title>Job search results – Goodmoves</title>
 {{/with ~}}
 {{else}}
-<title>Goodmoves – Search results</title>
+<title>Job search results – Goodmoves</title>
 {{/if ~}}
 <description>{{{description}}}</description>
 <link>https://goodmoves.com{{{replace (replace request.params.uri.path "&rss" "") "?rss" ""}}}</link>
