--- a/sites/configurations/goodmoves/templates/events/event-head-tags.hbs
+++ b/sites/configurations/goodmoves/templates/events/event-head-tags.hbs
@@ -1,7 +1,7 @@
 {{#if data.primaryResponse.hits.hits.[0] ~}}
 {{#with data.primaryResponse.hits.hits.[0]._source ~}}
-<title>Goodmoves – Training – {{title}}</title>
-<meta property="og:title" content="Goodmoves – Training – {{title}}" data-dynamic="true">
+<title>Training course: {{title}} – Goodmoves</title>
+<meta property="og:title" content="Training course: {{title}} – Goodmoves" data-dynamic="true">
 {{#ifAny og_image ../og_image ~}}
 <meta property="og:image" content="{{default og_image ../og_image}}" data-dynamic="true">
 {{/ifAny ~}}
@@ -16,6 +16,6 @@
 {{/if ~}}
 {{/with ~}}
 {{else}}
-<title>Goodmoves – Training</title>
-<meta property="og:title" content="Goodmoves – Training" data-dynamic="true">
+<title>Goodmoves – charity and voluntary sector recruitment</title>
+<meta property="og:title" content="Goodmoves – charity and voluntary sector recruitment" data-dynamic="true">
 {{/if ~}}
