--- a/sites/configurations/goodmoves/templates/pages/page-head-tags.hbs
+++ b/sites/configurations/goodmoves/templates/pages/page-head-tags.hbs
@@ -1,8 +1,8 @@
 {{#if data.primaryResponse.hits.hits.[0] ~}}
 {{#with data.primaryResponse.hits.hits.[0]._source ~}}
 {{#ifAny title og_title ~}}
-<title>Goodmoves – {{{default title og_title}}}</title>
-<meta property="og:title" content="Goodmoves – {{{default title og_title}}}" data-dynamic="true">
+<title>{{{default title og_title}}} – Goodmoves</title>
+<meta property="og:title" content="{{{default title og_title}}} – Goodmoves" data-dynamic="true">
 {{else}}
 <title>Goodmoves – charity and voluntary sector recruitment</title>
 <meta property="og:title" content="Goodmoves – charity and voluntary sector recruitment" data-dynamic="true">
