--- a/sites/configurations/goodmoves/templates/vacancies/vacancy-foot.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/vacancy-foot.hbs
@@ -2,7 +2,7 @@
 $(document).ready(function() {
 {{#if data.auth}}
   var recentlyViewed = goodmoves.getCookie('recently_viewed') || '';
-  console.log('Recently Viewed:', recentlyViewed, '| Vacancy Id:', vacancyId);
+  // console.log('Recently Viewed:', recentlyViewed, '| Vacancy Id:', vacancyId);
   recentlyViewed = recentlyViewed.split(',');
   recentlyViewed.unshift(vacancyId);
   var newRecentlyViewed = [];
@@ -13,7 +13,7 @@ $(document).ready(function() {
     }
   };
   newRecentlyViewed = newRecentlyViewed.join(',');
-  console.log('New Recently Viewed:', newRecentlyViewed);
+  // console.log('New Recently Viewed:', newRecentlyViewed);
   goodmoves.setCookie('recently_viewed', newRecentlyViewed, 7);
 {{/if}}
 
@@ -22,7 +22,7 @@ $(document).ready(function() {
     var url = $(evt.currentTarget).attr('href');
     var parts = url.split('/');
     var filename = parts[parts.length - 1];
-    
+
     gtag('event', 'document_hit', {
       'event_category': 'goodmoves-vacancy',
       'event_label': vacancyId,
