--- a/sites/configurations/volunteerscotland-search/templates/opportunities/home.hbs
+++ b/sites/configurations/volunteerscotland-search/templates/opportunities/home.hbs
@@ -145,22 +145,8 @@
   </div>
 
   <div class="home-browse h-padding">
-    <h3 class="mdc-drawer__content-heading cursor-pointer h-padding-full" data-collapse-target="#home-browse-collapse" role="button" aria-pressed="false" aria-label="Show browse section" tabindex="0">
-      <span class="mdc-button mdc-button--raised" onclick="gtag('event', 'ui-interaction', { event_category: 'home-page', event_label: 'Browse menu click' })">
-        Browse
-        <span class="mdc-icon-toggle">
-          <span class="far fa-chevron-down" aria-hidden="true"></span>
-        </span>
-      </span>
-      <span class="mdc-typography--body2">
-        By client group, work type, or region
-      </span>
-    </h3>
-    <div id="home-browse-collapse" style="display: none;">
+    <div id="home-browse-collapse">
       {{> browse eventContext="category-browser-home"}}
     </div>
   </div>
-
-  {{> tfn_latest}}
-
 </div>
