--- a/sites/configurations/scvo/templates/pages/page-jobs-landing.hbs
+++ b/sites/configurations/scvo/templates/pages/page-jobs-landing.hbs
@@ -10,22 +10,22 @@
             <section class="mdc-card__supporting-text">
               <h3>
                 Find a job in the third sector&ensp;
-                <span class="mdc-typography--body2"><a href="/jobs/search">Browse</a></span>
+                <span class="mdc-typography--body2"><a href="https://goodmoves.com/browse">Browse</a></span>
               </h3>
-              <form action="/jobs/search" method="GET" [searchroute]="'goodmoves_job_search'" class="search_form" data-auto-search="true">
+              <form action="https://goodmoves.com/search" method="GET" class="search_form" data-auto-search="true">
                 <div class="mdc-textfield mdc-textfield--upgraded">
-                  <input type="text" class="mdc-textfield__input" name="q" id="jobs-keywords" placeholder="Keywords" value="{{request.params.query.q}}">
+                  <input type="text" class="mdc-textfield__input" name="keywords" id="jobs-keywords" placeholder="Keywords" value="{{request.params.query.q}}">
                   <button type="submit" class="mdc-toolbar__icon mdc-toolbar__search search-button-large" aria-label="Search" alt="Search">
                     <span class="far fa-2x fa-search" aria-hidden="true"></span>
                   </button>
                 </div>
               </form>
               <p>
-                Try: <a href="/jobs/search?role=Management">Management</a>, <a href="/jobs/search?sector=Social+Care">Social Care</a>, <a href="/jobs/search?role=Board+Membership%2Ftrustee">Board Membership/trustee</a>
+                Charity jobs in <a href="https://goodmoves.com/jobs-in/aberdeen">Aberdeen</a>, <a href="https://goodmoves.com/jobs-in/dundee">Dundee</a>, <a href="https://goodmoves.com/jobs-in/edinburgh">Edinburgh</a>, <a href="https://goodmoves.com/jobs-in/glasgow">Glasgow</a>, <a href="https://goodmoves.com/jobs-in/highland">Inverness</a>, <a href="https://goodmoves.com/jobs-in/stirling">Stirling</a>, and <a href="https://goodmoves.com/jobs-in/perth-and-kinross">Perth</a>.
               </p>
             </section>
             <section class="mdc-card__actions">
-              <a href="https://goodmoves.com/recruiting" class="mdc-action">Advertise with us <span class="far fa-external-link"></span></a>
+              <a href="https://goodmoves.com/recruitment" class="mdc-action">Advertise with us</a>
             </section>
           </div>
         </div>
