Email formatting minor

--- a/sites/configurations/emailer/partials/subjects/goodmoves-saved-searches.hbs
+++ b/sites/configurations/emailer/partials/subjects/goodmoves-saved-searches.hbs
@@ -1,1 +1,1 @@
-Goodmoves Job Alert - {{length searchData.hits.hits}} new {{inflect (length searchData.hits.hits) "vacancy" "vacancies" false}}
+Goodmoves job alert - {{length searchData.hits.hits}} new {{inflect (length searchData.hits.hits) "vacancy" "vacancies" false}}
