--- a/sites/configurations/emailer/partials/subjects/goodmoves-shortlist.hbs
+++ b/sites/configurations/emailer/partials/subjects/goodmoves-shortlist.hbs
@@ -1,1 +1,1 @@
-Goodmoves Shortlist Alert - {{length searchData.hits.hits}} {{inflect (length searchData.hits.hits) "vacancy" "vacancies" false}} closing soon
+Goodmoves shortlist alert - {{length searchData.hits.hits}} {{inflect (length searchData.hits.hits) "vacancy" "vacancies" false}} closing soon
