--- a/sites/configurations/emailer/partials/bodies/goodmoves-saved-searches.html
+++ b/sites/configurations/emailer/partials/bodies/goodmoves-saved-searches.html
@@ -223,7 +223,7 @@
                                     <td style="vertical-align:top;padding:0px;">
                                       <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%">
                                         <tr>
-                                          <td align="left" style="font-size:0px;padding:10px 25px;word-break:break-word;">
+                                          <td align="left" style="font-size:0px;padding:0px;word-break:break-word;">
                                             <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:16px;line-height:1;text-align:left;color:#000000;">
                                               <p>{{inflect hits.total "job" "jobs" true}} matching your preferences {{inflect hits.total "was" "were"}} added to Goodmoves since the {{momentFormat (moment subscription.lastSent "") "Do \o\f MMMM"}}.</p>
                                             </div>
