--- a/sites/configurations/emailer/partials/bodies/goodmoves-saved-searches.html
+++ b/sites/configurations/emailer/partials/bodies/goodmoves-saved-searches.html
@@ -101,8 +101,8 @@
   </style>
 </head>
 
-<body style="background-color:#eaeaea;">
-  <div style="background-color:#eaeaea;">
+<body style="background-color:#F5F5F5;">
+  <div style="background-color:#F5F5F5;">
     <!--[if mso | IE]>
       <table
          align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600"
@@ -225,7 +225,8 @@
                                         <tr>
                                           <td align="left" style="font-size:0px;padding:0px;word-break:break-word;">
                                             <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:16px;line-height:1;text-align:left;color:#000000;">
-                                              <p>{{inflect hits.total "job" "jobs" true}} matching your preferences {{inflect hits.total "was" "were"}} added to Goodmoves since the {{momentFormat (moment subscription.lastSent "") "Do \o\f MMMM"}}.</p>
+                                              <p>
+                                                <strong>{{inflect hits.total "job" "jobs" true}}</strong> matching your preferences {{inflect hits.total "was" "were"}} added to Goodmoves since the {{momentFormat (moment subscription.lastSent "") "Do \o\f MMMM"}}. </p>
                                             </div>
                                           </td>
                                         </tr>
@@ -291,7 +292,7 @@
                                           <tr>
                                             <td align="left" style="font-size:0px;padding:0px;word-break:break-word;">
                                               <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:16px;line-height:1;text-align:left;color:#000000;">
-                                                <h2>
+                                                <h2 style="margin:10px 0 0;">
                                                   <a href="https://goodmoves.com/vacancy/{{_source.slug}}?utm_source=alert&utm_medium=email" color="#42842A" style="color:#42842A;font-weight:bold;">{{{_source.title}}}</a>
                                                 </h2>
                                                 <p>
@@ -300,12 +301,10 @@
                                                   <strong>Salary:</strong>
                                                   {{{_source.salary}}}<br />
                                                   <strong>Location:</strong>
-                                                  {{{_source.location}}} <p>
-                                                    <div>
-                                                      {{{truncate (stripTags _source.description) 250}}} </div>
-                                                    <p style="text-align:right;">
-                                                      <a href="https://goodmoves.com/vacancy/{{_source.slug}}?utm_source=alert&utm_medium=email" color="#42842A" style="color:#42842A;font-weight:bold;">View job &gt;</a>
-                                                    </p>
+                                                  {{{_source.location}}} </p>
+                                                <p>
+                                                  {{{truncate (stripTags _source.description) 250}}} <a href="https://goodmoves.com/vacancy/{{_source.slug}}?utm_source=alert&utm_medium=email" color="#42842A" style="color:#42842A;font-weight:bold;">Find out more</a>
+                                                </p>
                                               </div>
                                             </td>
                                           </tr>
@@ -486,36 +485,102 @@
                 <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#37474F;background-color:#37474F;width:100%;">
                   <tbody>
                     <tr>
-                      <td style="direction:ltr;font-size:0px;padding:10px;text-align:center;vertical-align:top;">
+                      <td style="direction:ltr;font-size:0px;padding:0px;text-align:center;vertical-align:top;">
                         <!--[if mso | IE]>
                   <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                 
         <tr>
       
             <td
-               class="" style="vertical-align:top;width:560px;"
+               class="" style="vertical-align:top;width:580px;"
             >
           <![endif]-->
                         <div class="mj-column-per-100 outlook-group-fix" style="font-size:13px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
                           <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
                             <tbody>
                               <tr>
-                                <td style="vertical-align:top;padding:0px;">
+                                <td style="vertical-align:top;padding:10px;">
                                   <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%">
                                     <tr>
                                       <td align="left" style="font-size:0px;padding:0px;word-break:break-word;">
+                                        <div style="font-family:Montserrat, helvetica, Arial, sans-serif;font-size:16px;line-height:1;text-align:left;color:#ffffff;">
+                                          <p style="margin:0px;">
+                                            <a href="https://goodmoves.com/searches" color="#fff" style="color:#fff;font-weight:bold;text-decoration:none;">Change your alert preferences</a> or <a href="%unsubscribe_url%" color="#fff" style="color:#fff;font-weight:bold;text-decoration:none;">unsubscribe</a>
+                                          </p>
+                                        </div>
+                                      </td>
+                                    </tr>
+                                  </table>
+                                </td>
+                              </tr>
+                            </tbody>
+                          </table>
+                        </div>
+                        <!--[if mso | IE]>
+            </td>
+          
+        </tr>
+      
+                  </table>
+                <![endif]-->
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              <!--[if mso | IE]>
+          </td>
+        </tr>
+      </table>
+      
+              </td>
+            </tr>
+          
+            <tr>
+              <td
+                 class="" width="600px"
+              >
+          
+      <table
+         align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:580px;" width="580"
+      >
+        <tr>
+          <td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;">
+      <![endif]-->
+              <div style="background:#263238;background-color:#263238;Margin:0px auto;max-width:580px;">
+                <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#263238;background-color:#263238;width:100%;">
+                  <tbody>
+                    <tr>
+                      <td style="direction:ltr;font-size:0px;padding:0px;text-align:center;vertical-align:top;">
+                        <!--[if mso | IE]>
+                  <table role="presentation" border="0" cellpadding="0" cellspacing="0">
+                
+        <tr>
+      
+            <td
+               class="" style="vertical-align:top;width:580px;"
+            >
+          <![endif]-->
+                        <div class="mj-column-per-100 outlook-group-fix" style="font-size:13px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
+                          <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                            <tbody>
+                              <tr>
+                                <td style="vertical-align:top;padding:10px;">
+                                  <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%">
+                                    <tr>
+                                      <td align="left" style="font-size:0px;padding:0px 0px 15px;word-break:break-word;">
                                         <div style="font-family:Montserrat, helvetica, Arial, sans-serif;font-size:14px;line-height:1;text-align:left;color:#ffffff;">
-                                          <p> &#169; 2018. The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation.<br /> Charity registered in Scotland SC003558. Registered office Mansfield Traquair Centre, 15 Mansfield Place, Edinburgh EH3 6BB. </p>
+                                          <p style="margin:0px;"> &#169; 2018. The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation. Charity registered in Scotland SC003558. Registered office Mansfield Traquair Centre, 15 Mansfield Place, Edinburgh EH3 6BB. </p>
                                         </div>
                                       </td>
                                     </tr>
                                     <tr>
-                                      <td align="right" style="font-size:0px;padding:0px;word-break:break-word;">
+                                      <td align="center" style="font-size:0px;padding:0px;word-break:break-word;">
                                         <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:collapse;border-spacing:0px;">
                                           <tbody>
                                             <tr>
-                                              <td style="width:119px;">
-                                                <img height="auto" src="https://storage.googleapis.com/scvo-assets/emailer/scvo-logo.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:119px;" width="119" />
+                                              <td style="width:125px;">
+                                                <img height="auto" src="https://storage.googleapis.com/scvo-assets/emailer/scvo-logo.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:125px;" width="125" />
                                               </td>
                                             </tr>
                                           </tbody>
