--- a/sites/configurations/goodmoves/emails/password-reset.mjml
+++ b/sites/configurations/goodmoves/emails/password-reset.mjml
@@ -5,37 +5,34 @@
         <mj-column padding="0px">
           <mj-image src="https://storage.googleapis.com/scvo-assets/emailer/goodmoves-logo-white.png" width="352px" align="left" padding="0px"></mj-image>
         </mj-column>
-      </mj-section>  
-   
-      <mj-section> 
+      </mj-section>
+
+      <mj-section>
         <mj-column padding="0px">
           <mj-text font-size="16px" color="#000000" font-family="Montserrat, helvetica, Arial, sans-serif">
             <p>Hello,</p>
             <p>Please follow this link to reset your %APP_NAME% password for your %EMAIL% account.</p>
           </mj-text>
-          
+
           <mj-button href='%LINK%' font-family="Montserrat, helvetica, Arial, sans-serif" background-color="#42842A" color="white">
             Reset password
           </mj-button>
-          
+
           <mj-text font-size="16px" color="#000000" font-family="Montserrat, helvetica, Arial, sans-serif">
             <p>If you didn’t ask to reset your password, you can ignore this email.</p>
           </mj-text>
         </mj-column>
       </mj-section>
       
-      <mj-section background-color="#37474F" padding="10px">
-        <mj-column padding="0px">
-          <mj-text font-size="14px" color="#ffffff" font-family="Montserrat, helvetica, Arial, sans-serif" padding="0px">
-            <p>
-              &#169; 2018 The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation. Charity registered in Scotland SC003558.
-            </p>
-            <p>
-              15 Mansfield Place, Edinburgh, EH3 6BB
+      <mj-section background-color="#263238" padding="0px">
+        <mj-column padding="10px">
+          <mj-text font-size="14px" color="#ffffff" font-family="Montserrat, helvetica, Arial, sans-serif" padding="0px 0px 15px">
+            <p style="margin:0px;">
+              &#169; 2018. The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation. Charity registered in Scotland SC003558. Registered office Mansfield Traquair Centre, 15 Mansfield Place, Edinburgh EH3 6BB.
             </p>
           </mj-text>
-          
-          <mj-image src="https://storage.googleapis.com/scvo-assets/emailer/scvo-logo.png" align="right" width="119px" padding="0px"></mj-image>
+
+          <mj-image src="https://storage.googleapis.com/scvo-assets/emailer/scvo-logo.png" align="center" width="125px" padding="0px"></mj-image>
         </mj-column>
       </mj-section>
     </mj-wrapper>
