--- a/sites/configurations/volunteerscotland-search/templates/opportunities/home.hbs
+++ b/sites/configurations/volunteerscotland-search/templates/opportunities/home.hbs
@@ -1,22 +1,13 @@
 <div class="container-fluid home-banner">
-  <div class="banner-search overlay" style="background-image: url('https://storage.googleapis.com/scvo-cms/22674/Drake-Music-06.jpg');">
+  <div class="banner-search overlay" style="background-image: url('http://cms.scvo.org/wp-content/uploads/2017/11/Teapot-Trust-14.jpg');">
     <div class="content page-content">
-      <div class="overlay-content">
-        <div class="mdc-layout-grid">
-          <div class="mdc-layout-grid__inner">
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-              <!-- {{> logo welcome="true"}} -->
-              <p class="header-extra">
-                Find a volunteering opportunity to suit you
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
       <div class="search-content">
         <form id="search-view" class="search-form mdc-elevation--z5" action="/search" method="GET">
           <input type="hidden" name="lat" value="{{@root.request.params.query.lat}}" id="location-lat">
           <input type="hidden" name="lng" value="{{@root.request.params.query.lng}}" id="location-lng">
+          <h2 class="mdc-typography--headline4">
+            Find a volunteering opportunity to suit you
+          </h2>
           <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
               <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
