--- a/sites/configurations/volunteerscotland-search/partials/search-info.hbs
+++ b/sites/configurations/volunteerscotland-search/partials/search-info.hbs
@@ -1,5 +1,5 @@
 {{#if paging.totalResults ~}}
-<div class="search-info mdc-elevation--z3">
+<div class="search-info">
   <strong>Total results:</strong> {{addCommas paging.totalResults}}
   {{#compare paging.totalResults ">" 10 ~}} |
   <strong>Current page:</strong> {{addCommas paging.currentPage}} of {{addCommas paging.totalPages}}
