--- a/sites/configurations/getinvolved/templates/opportunities/map-agg.hbs
+++ b/sites/configurations/getinvolved/templates/opportunities/map-agg.hbs
@@ -1,14 +1,5 @@
 <div id="detailed-results-container" class="container-content container-map">
   <div id="map-full" data-map-name="fullMap" data-map-clustered-options='{
-    {{#ifAll @root.request.params.query.location @root.request.params.query.lat @root.request.params.query.lng ~}}
-  {{/ifAll ~}}
-    }'>
-    {{#each @root.data.search_data.map_agg_results.aggregations.grid.buckets ~}}
-      {{#if centroid ~}}
-        <marker style="display:none;" data-map="fullMap" data-lat="{{centroid.location.lat}}" data-lng="{{centroid.location.lon}}">
-          {{key}} {{doc_count}}
-        </marker>
-      {{/if ~}}
-    {{/each ~}}
+    "query" : {{jsStringify @root.request.params.query}}, "outerUrl" : "map", "innerUrl" : "map_data"}'>
   </div>
 </div>
