--- a/sites/configurations/getinvolved/templates/opportunities/map-agg.hbs
+++ b/sites/configurations/getinvolved/templates/opportunities/map-agg.hbs
@@ -1,5 +1,5 @@
 <div id="detailed-results-container" class="container-content container-map">
   <div id="map-full" data-map-name="fullMap" data-map-clustered-options='{
-    "query" : {{jsStringify @root.request.params.query}}, "outerUrl" : "map", "innerUrl" : "map_data"}'>
+    "query" : {{jsStringify @root.request.params.query}}, "queryUrl" : "map_data"}'>
   </div>
 </div>
