Styling to match latest design requirements

--- a/sites/configurations/volunteerscotland-search/partials/search-info.hbs
+++ b/sites/configurations/volunteerscotland-search/partials/search-info.hbs
@@ -1,14 +1,10 @@
 {{#if paging.totalResults ~}}
 <div class="search-info">
-  <strong>Total results:</strong> {{addCommas paging.totalResults}}
-  {{#compare paging.totalResults ">" 10 ~}} |
-  <strong>Current page:</strong> {{addCommas paging.currentPage}} of {{addCommas paging.totalPages}}
+  Your search returned <strong>{{addCommas paging.totalResults}} results</strong>
+  {{#compare @root.route.name "!==" "opportunity_map" ~}}
+  {{#compare paging.totalResults ">" 10 ~}} <strong>|</strong>
+  page {{addCommas paging.currentPage}} of {{addCommas paging.totalPages}}
   {{/compare ~}}
-  {{#compare @root.request.params.path "===" "search" ~}}
-  <a href="/map{{@root.request.url.search}}" class="pull-right">
-    <span class="far fa-map-marker-alt fa-fw mdc-list-item__graphic" title="Map"></span>
-    <span class="underline">Show {{inflect paging.totalResults "opportunity" "opportunities"}} on map</a>
-  </a>
   {{/compare ~}}
 </div>
 {{else}}
