--- a/sites/configurations/volunteerscotland-search/partials/opportunity-search-form.hbs
+++ b/sites/configurations/volunteerscotland-search/partials/opportunity-search-form.hbs
@@ -1,3 +1,50 @@
+{{#*inline "term_filter"}}
+<h3 class="mdc-drawer__content-heading cursor-pointer noselect mdc-drawer--occasional-ie11" data-collapse-target="#{{../instance_id}}-{{type}}-collapse" role="button" aria-pressed="false" aria-label="Show {{getProperty @root.context.metaData.termTypeLabels (concat type ".plural")}}" tabindex="0">
+  {{#compare type "===" "regions" ~}}
+    <strong>OR</strong> Region
+  {{else}}
+    {{getProperty @root.context.metaData.termTypeLabels (concat type ".plural")}}
+  {{/compare ~}}
+  <span class="mdc-icon-toggle pull-right">
+    <i class="far {{#if (getProperty @root.request.params.query type)}}fa-chevron-up{{else}}fa-chevron-down{{/if}}" aria-hidden="true"></i>
+  </span>
+</h3>
+<div class="mdc-drawer--occasional-ie11" id="{{../instance_id}}-{{type}}-collapse"{{#unless (getProperty @root.request.params.query type)}} style="display: none;"{{/unless}}>
+  {{#compare type "===" "regions" ~}}
+    {{#if (any @root.data.opportunitySupplimentary.types.aggregations.countries.buckets) ~}}
+      {{#each @root.data.opportunitySupplimentary.types.aggregations.countries.buckets ~}}
+        {{#if key ~}}
+          {{#compare (length @root.data.opportunitySupplimentary.types.aggregations.countries.buckets) ">=" 1 ~}}
+            <h3 class="mdc-typography--headline7">{{{key}}}</h3>
+          {{/compare ~}}
+        {{/if ~}}
+        {{#each this.regions_slugs.buckets ~}}
+          {{#if key ~}}
+            {{> term_checkbox slug=key field="regions" selected=@root.request.params.query.regions instance_id=../../../instance_id value=(lookup ../this.regions.buckets @index)}}
+          {{/if ~}}
+        {{/each ~}}
+      {{/each ~}}
+      {{#ifAny (length @root.data.opportunitySupplimentary.types.aggregations.home_based.buckets) (length @root.data.opportunitySupplimentary.types.aggregations.various_locations.buckets) ~}}
+        {{#compare (length @root.data.opportunitySupplimentary.types.aggregations.countries.buckets) ">=" 1 ~}}
+          <h3 class="mdc-typography--headline7">Other</h3>
+        {{/compare ~}}
+        {{#compare (length @root.data.opportunitySupplimentary.types.aggregations.home_based.buckets) ">=" 1 ~}}
+          {{> term_checkbox slug="true" field="home_based" selected=@root.request.params.query.home_based instance_id=../instance_id value="Home-based"}}
+        {{/compare ~}}
+        {{#compare (length @root.data.opportunitySupplimentary.types.aggregations.various_locations.buckets) ">=" 1 ~}}
+          {{> term_checkbox slug="true" field="various_locations" selected=@root.request.params.query.various_locations instance_id=../instance_id value="Various locations"}}
+        {{/compare ~}}
+      {{/ifAny ~}}
+    {{/if ~}}
+  {{else}}
+    {{#each (getProperty @root.data.opportunitySupplimentary.types.aggregations (concat type "_slugs.buckets")) ~}}
+      {{#if key ~}}
+        {{> term_checkbox slug=key field=../type selected=(getProperty @root.request.params.query ../type) instance_id=../../instance_id value=(lookup (getProperty @root.data.opportunitySupplimentary.types.aggregations (concat ../type ".buckets")) @index)}}
+      {{/if ~}}
+    {{/each ~}}
+  {{/compare ~}}
+</div>
+{{/inline}}
 {{#*inline "term_checkbox"}}
   <div class="mdc-form-field">
     <div class="mdc-checkbox">
@@ -19,28 +66,10 @@
 {{/inline}}
 
 <div class="mdc-drawer__content">
-  <h2 class="mdc-drawer__content-heading hide-sm mdc-drawer--occasional">Search opportunities</h2>
-
-  <div class="h-padding">
-    {{#>components_tab_bar}}
-      {{>components_tab url=(concat "/search" @root.request.url.search) iconClasses="far fa-list fa-fw" label="List" active=(compare @root.request.url.pathname "===" "/search")}}
-      {{>components_tab url=(concat "/map" @root.request.url.search) iconClasses="far fa-map-marker-alt fa-fw" label="Map" active=(compare @root.request.url.pathname "===" "/map")}}
-    {{/components_tab_bar}}
-  </div>
+  <!-- <h2 class="mdc-drawer__content-heading hide-sm mdc-drawer--occasional">Search opportunities</h2> -->
 
   <form action="/{{#compare @root.request.url.pathname "/map"}}map{{else}}search{{/compare}}" method="GET" class="search-form" novalidate>
     <input type="hidden" name="sort" value="{{@root.request.params.query.sort}}" id="{{instance_id}}-sort">
-    <div class="h-padding">
-      <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-        <span class="far fa-search mdc-text-field__icon" tabindex="-1"></span>
-        <input type="text" id="{{instance_id}}-keywords" name="keywords" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{@root.request.params.query.keywords}}" data-lpignore="true" autocomplete="off">
-        <label class="mdc-floating-label" for="keywords">
-          Keywords
-        </label>
-        <div class="mdc-line-ripple"></div>
-      </div>
-    </div>
-
     <div class="h-padding">
       <div class="mdc-layout-grid">
         <div class="mdc-layout-grid__inner">
@@ -85,52 +114,33 @@
     <input type="hidden" name="lat" value="{{@root.request.params.query.lat}}">
     <input type="hidden" name="lng" value="{{@root.request.params.query.lng}}">
 
-    {{#each (split "regions,client_groups,work_types" ",") ~}}
-      <h3 class="mdc-drawer__content-heading cursor-pointer noselect mdc-drawer--occasional-ie11" data-collapse-target="#{{../instance_id}}-{{this}}-collapse" role="button" aria-pressed="false" aria-label="Show {{getProperty @root.context.metaData.termTypeLabels (concat this ".plural")}}" tabindex="0">
-        {{getProperty @root.context.metaData.termTypeLabels (concat this ".plural")}}
-        <span class="mdc-icon-toggle pull-right">
-          <i class="far {{#if (getProperty @root.request.params.query this)}}fa-chevron-up{{else}}fa-chevron-down{{/if}}" aria-hidden="true"></i>
-        </span>
-      </h3>
-      <div class="mdc-drawer--occasional-ie11" id="{{../instance_id}}-{{this}}-collapse"{{#unless (getProperty @root.request.params.query this)}} style="display: none;"{{/unless}}>
-        {{#compare this "===" "regions" ~}}
-          {{#if (any @root.data.opportunitySupplimentary.types.aggregations.countries.buckets) ~}}
-            {{#each @root.data.opportunitySupplimentary.types.aggregations.countries.buckets ~}}
-              {{#if key ~}}
-                {{#compare (length @root.data.opportunitySupplimentary.types.aggregations.countries.buckets) ">=" 1 ~}}
-                  <h3 class="mdc-typography--headline7">{{{key}}}</h3>
-                {{/compare ~}}
-              {{/if ~}}
-              {{#each this.regions_slugs.buckets ~}}
-                {{#if key ~}}
-                  {{> term_checkbox slug=key field="regions" selected=@root.request.params.query.regions instance_id=../../../instance_id value=(lookup ../this.regions.buckets @index)}}
-                {{/if ~}}
-              {{/each ~}}
-            {{/each ~}}
-            {{#ifAny (length @root.data.opportunitySupplimentary.types.aggregations.home_based.buckets) (length @root.data.opportunitySupplimentary.types.aggregations.various_locations.buckets) ~}}
-              {{#compare (length @root.data.opportunitySupplimentary.types.aggregations.countries.buckets) ">=" 1 ~}}
-                <h3 class="mdc-typography--headline7">Other</h3>
-              {{/compare ~}}
-              {{#compare (length @root.data.opportunitySupplimentary.types.aggregations.home_based.buckets) ">=" 1 ~}}
-                {{> term_checkbox slug="true" field="home_based" selected=@root.request.params.query.home_based instance_id=../instance_id value="Home-based"}}
-              {{/compare ~}}
-              {{#compare (length @root.data.opportunitySupplimentary.types.aggregations.various_locations.buckets) ">=" 1 ~}}
-                {{> term_checkbox slug="true" field="various_locations" selected=@root.request.params.query.various_locations instance_id=../instance_id value="Various locations"}}
-              {{/compare ~}}
-            {{/ifAny ~}}
-          {{/if ~}}
-        {{else}}
-          {{#each (getProperty @root.data.opportunitySupplimentary.types.aggregations (concat this "_slugs.buckets")) ~}}
-            {{#if key ~}}
-              {{> term_checkbox slug=key field=../this selected=(getProperty @root.request.params.query ../this) instance_id=../../instance_id value=(lookup (getProperty @root.data.opportunitySupplimentary.types.aggregations (concat ../this ".buckets")) @index)}}
-            {{/if ~}}
-          {{/each ~}}
-        {{/compare ~}}
+    {{> term_filter type="regions" instance_id=instance_id ~}}
+
+    <div class="h-padding">
+      <strong>Refine by</strong>
+    </div>
+
+    <div class="h-padding">
+      <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+        <span class="far fa-search mdc-text-field__icon" tabindex="-1"></span>
+        <input type="text" id="{{instance_id}}-keywords" name="keywords" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{@root.request.params.query.keywords}}" data-lpignore="true" autocomplete="off">
+        <label class="mdc-floating-label" for="keywords">
+          Keywords
+        </label>
+        <div class="mdc-line-ripple"></div>
       </div>
+    </div>
+
+    {{#each (split "work_types,client_groups" ",") ~}}
+      {{> term_filter type=this instance_id=instance_id ~}}
+    {{/each ~}}
+
+    {{#each (split "age_groups,availability,services" ",") ~}}
+      {{> term_filter type=this instance_id=instance_id ~}}
     {{/each ~}}
 
     <div class="v-margin-full">
-      {{> term_checkbox slug="true" field="recently_updated" selected=@root.request.params.query.recently_updated instance_id=instance_id value="Only show opportunities updated in the last year"}}
+      {{> term_checkbox slug="true" field="recently_updated" selected=@root.request.params.query.recently_updated instance_id=instance_id value="Only show opportunities updated in the last year" ~}}
     </div>
 
     <div class="h-margin mdc-drawer--occasional-ie11">
