--- a/sites/configurations/volunteerscotland-search/partials/opportunity/full.hbs
+++ b/sites/configurations/volunteerscotland-search/partials/opportunity/full.hbs
@@ -2,10 +2,16 @@
   {{> opportunity_key_info}}
   <hr class="mdc-list-divider" />
   <div class="content-primary-info-container">
-    {{#>components_tab_bar id="content-primary-tab-bar" defaultTabIdentifier="tab"}}
-      {{>components_tab iconClasses="far fa-list-ul fa-fw" label="Information" active=true tabName="panel-1"}}
-      {{>components_tab iconClasses="far fa-map-marker-alt fa-fw" label="Location" active=false tabName="panel-2"}}
-    {{/components_tab_bar}}
+    <div class="mdc-layout-grid">
+      <div class="mdc-layout-grid__inner">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone action">
+          {{#>components_tab_bar id="primary-tab-bar" defaultTabIdentifier="tab"}}
+            {{>components_tab iconClasses="far fa-list-ul fa-fw" label="Information" active=true tabName="panel-1"}}
+            {{>components_tab iconClasses="far fa-map-marker-alt fa-fw" label="Location" active=false tabName="panel-2"}}
+          {{/components_tab_bar}}
+        </div>
+      </div>
+    </div>
     <hr class="mdc-list-divider" />
     <div class="panels" for="content-primary-tab-bar">
       <div class="panel panel--active mdc-card--full-content" role="tabpanel" aria-hidden="false" data-tab-name="panel-1">
