--- a/sites/configurations/volunteerscotland-search/templates/opportunities/map.hbs
+++ b/sites/configurations/volunteerscotland-search/templates/opportunities/map.hbs
@@ -1,11 +1,32 @@
 <div id="detailed-results-container" class="container-content container-map">
+  <div class="mdc-layout-grid head">
+    <div class="mdc-layout-grid__inner">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+        <div class="h-padding-full">
+          {{> search_info paging=@root.data.search_data.map_results.pagination}}
+        </div>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+      </div>
+    </div>
+    <div class="mdc-layout-grid__inner">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone action">
+        <div class="h-padding-full v-margin-full">
+          {{#>components_tab_bar}}
+            {{>components_tab url=(concat "/search" @root.request.url.search) iconClasses="far fa-list fa-fw" label="List" active=(compare @root.request.url.pathname "===" "/search")}}
+            {{>components_tab url=(concat "/map" @root.request.url.search) iconClasses="far fa-map-marker-alt fa-fw" label="Map" active=(compare @root.request.url.pathname "===" "/map")}}
+          {{/components_tab_bar}}
+        </div>
+      </div>
+    </div>
+  </div>
   <div id="map-full" data-map-name="fullMap" data-map-options='{
     {{#ifAll @root.request.params.query.location @root.request.params.query.lat @root.request.params.query.lng ~}}
       "circle": {
         "lat": {{@root.request.params.query.lat}},
         "lng": {{@root.request.params.query.lng}},
         "radius": {{default @root.request.params.query.distance 0}},
-        "color": "#AD1457"
+        "color": "#ffde00"
       }
     {{/ifAll ~}}
     }'>
