Hide age groups - to discuss

--- a/sites/configurations/volunteerscotland-search/partials/opportunity-search-form.hbs
+++ b/sites/configurations/volunteerscotland-search/partials/opportunity-search-form.hbs
@@ -135,7 +135,7 @@
       {{> term_filter type=this instance_id=instance_id ~}}
     {{/each ~}}
 
-    {{#each (split "age_groups,availability,services" ",") ~}}
+    {{#each (split "availability,services" ",") ~}}
       {{> term_filter type=this instance_id=instance_id ~}}
     {{/each ~}}
 
